--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple CICDemo web app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node -v && npm -v"
   },
   "keywords": [],
   "author": "",
